[bdist_wheel]
universal = 1

[metadata]
description-file = README.md

[coverage:report]
exclude_lines =
  pragma: no cover
  logger.
  __repr__

[flake8]
exclude = .git,__pycache__,docs,.pytest_cache,venv,.venv,env,virtualenv
max-complexity = 10
max-line-length = 120
tee = True

[pydocstyle]
convention = google
add-ignore = D100

[tool:pytest]
python_files = tests/*.py